--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @font-face{
   font-family: Inter;
-  src: url('../src/assets/fonts/Inter-VariableFont_opsz\,wght.ttf')
+  src: url('../src/assets/fonts/Inter-VariableFont_opsz,wght.ttf')
 }
 @import "tailwindcss";
 
